Made the basic set up for tests

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -15,6 +15,7 @@
 
     <!-- include source files here... -->
     <script src="../def.js"></script>
+    <script src="../dem.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/def.js"></script>
