Made dem events to bubble by default

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -19,6 +19,7 @@
 
     <!-- include spec files here... -->
     <script src="spec/def.js"></script>
+    <script src="spec/dem.js"></script>
 
 </head>
 
